--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.5",
     "@tabler/core": "^1.0.0-beta19",
-    "esbuild": "^0.16.10",
-    "esbuild-sass-plugin": "^2.4.0",
-    "jsvectormap": "1.5.1",
-    "rails_admin": "3.1.1",
-    "sass": "^1.57.1"
+    "esbuild": "^0.19.3",
+    "esbuild-sass-plugin": "^2.15.0",
+    "jsvectormap": "^1.5.3",
+    "rails_admin": "^3.1.2",
+    "sass": "^1.67.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
