--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.5",
     "@tabler/core": "^1.0.0-beta19",
-    "esbuild": "^0.19.3",
+    "esbuild": "0.19.3",
     "esbuild-sass-plugin": "^2.15.0",
     "jsvectormap": "^1.5.3",
     "rails_admin": "^3.1.2",
@@ -14,6 +14,6 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
-    "build:css": "node ./esbuild.config.js"
+    "build:css": "node ./esbuild.config.mjs"
   }
 }
